<resources>
    <string name="app_name">BT Feeder V2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="led_off_button">LED OFF</string>
    <string name="led_flash_button">LED FLASH</string>
    <string name="led_on_button">LED ON</string>
    <string name="disconnect_device_button">Disconnect Device</string>
    <string name="connect_device_button">Connect Device</string>
    <string name="select_bt_device_button">Select BT Device</string>
    <string name="enable_bt_button">Enable Bluetooth</string>
    <string name="title_activity_view_devices">ViewDevicesActivity</string>
    <string name="no_devices_available_text">No Devices Available\nCheck Settings And Try Again</string>
    <string name="bluetooth_not_supported_text">Your phone does not support Bluetooth</string>
    <string name="connection_time_out_text">Connection Timed Out\nPlease Try Again</string>
    <string name="bluetooth_enabled_text">Bluetooth Enabled</string>
    <string name="no_device_selected_text">No Device Selected</string>
    <string name="check_food_supply_button">Check Food Supply</string>
</resources>
