<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#D2D1DC"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusText"
        android:text="Connect A Device\nTo Begin"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#32313A"
        />

    <Button
        android:id="@+id/enableBluetoothButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_bt_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/viewDevicesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/select_bt_device_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/connectBluetoothDevice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_device_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/viewDevicesButton"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/disconnectBluetoothDevice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_device_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/viewFoodSupply"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/check_food_supply_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/disconnectBluetoothDevice"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/addFood"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Add Food"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/viewFoodSupply"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        />

</RelativeLayout>
